# Smart-fashion-recommendation-system

./: .gitignore  Dockerfile  README.md  TODO.md  render.yaml  start.sh
backend/: API_DOCUMENTATION.md  database.sql  pyproject.toml  requirements-prod.txt  requirements-render.txt  requirements.txt
backend/app/: __init__.py  data.py  main.py  main_render.py
backend/app/models/: models.py
backend/app/services/: agent.py  memory.py  prompts.py
backend/app/static/: index.html
backend/app/tools/: image_gen.py
backend/scripts/: import_json_to_mysql.py
backend/tests/: test_async_agent.py  test_image_gen.py  test_login.py
db/: chat_messages.json  images.json  uai_chat_db_chat_messages.sql  uai_chat_db_images.sql  uai_chat_db_routines.sql  uai_chat_db_user_profiles.sql  uai_chat_db_user_sessions.sql  uai_chat_db_user_statistics.sql  uai_chat_db_users.sql  user_profiles.json  user_sessions.json  user_statistics.json  users.json
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  LandingPage.css  LandingPage.jsx  LoginPage.css  LoginPage.jsx  ProfileSetupPage.css  ProfileSetupPage.jsx  api.js  index.css  main.jsx
