[project]
name = "gsoc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiofiles>=25.1.0",
    "bcrypt>=5.0.0",
    "beautifulsoup4>=4.14.3",
    "faiss-cpu>=1.13.2",
    "fastapi[standard]>=0.128.0",
    "google-adk>=1.18.0",
    "litellm>=1.80.11",
    "mcp-inspector>=0.1.0",
    "mcp[cli]>=1.25.0",
    "mysql-connector-python>=9.5.0",
    "numpy>=2.4.0",
    "pdfplumber>=0.11.0",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.20",
    "selenium>=4.39.0",
    "sentence-transformers>=5.2.0",
    "uvicorn>=0.34.0",
]
